# yamc

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  pyproject.toml  test_generator.py
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
data/: test.csv
examples/: train_cnn.cpp  train_lenet5.cpp  train_mlp.cpp  train_vgg16.cpp
include/: activation.h  conv.h  helper.h  image.h  layer.h  linear.h  loss.h  matrix.h  maxpool.h  module.h  nn.h  optimizer.h  utils.h
include/data/: CIFAR10.h  MNIST.h  TinyImageNet.h
include/layers/: activation.h  avgpool.h  conv.h  dropout.h  flatten.h  layer.h  linear.h  lrn.h  maxpool.h
include/models/: alexnet.h  lenet5.h  mlp.h  module.h  vgg16.h
scripts/: convert-cifar.py  convert-tiny-imagenet.py
source/: data.cpp  data.h  layer.cpp  layer.h  linear.cpp  linear.h  main.cpp  matrix.h  mlp.cpp  mlp.h  utils.cpp  utils.h
source/core/: loss.cpp  loss.h  matrix.h  optimizer.cpp  optimizer.h
source/net/: linear.cpp  linear.h  mlp.cpp  mlp.h
src/: activation.cpp  conv.cpp  dropout.cpp  image.cpp  layer.cpp  linear.cpp  loss.cpp  main.cpp  matrix.cpp  maxpool.cpp  module.cpp  nn.cpp  optimizer.cpp  utils.cpp
src/data/: CIFAR10.cpp  MNIST.cpp  TinyImageNet.cpp
src/layers/: activation.cpp  avgpool.cpp  conv.cpp  dropout.cpp  flatten.cpp  linear.cpp  lrn.cpp  maxpool.cpp
src/models/: alexnet.cpp  lenet5.cpp  mlp.cpp  module.cpp  vgg16.cpp
test/: CMakeLists.txt
test/source/: mnist-cpp_test.cpp
tests/: CMakeLists.txt  test_activation.cpp  test_convolution.cpp  test_helper.cpp  test_helper.h  test_layer.cpp  test_matrix.cpp
